<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/selected_photo"
            android:layout_width="135dp"
            android:layout_height="128dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/description"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_itemName"
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/selected_date"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/selected_description"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:text="@string/btn_edit_event" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="406dp">

    </ListView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_item_btn"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/btn_add" />


</LinearLayout>